--- a/src/mibg3/Admin/HanteraUtrustningAdmin.form
+++ b/src/mibg3/Admin/HanteraUtrustningAdmin.form
@@ -31,7 +31,7 @@
           <Group type="102" alignment="0" attributes="0">
               <EmptySpace min="-2" pref="20" max="-2" attributes="0"/>
               <Component id="kommunikationKnapp" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="-2" pref="80" max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="89" max="-2" attributes="0"/>
               <Component id="vapenKommunikation" min="-2" pref="106" max="-2" attributes="0"/>
               <EmptySpace max="32767" attributes="0"/>
               <Component id="jButton3" min="-2" max="-2" attributes="0"/>
@@ -50,7 +50,7 @@
                   <Component id="vapenKommunikation" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
                   <Component id="jButton3" alignment="3" min="-2" pref="56" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="29" max="32767" attributes="0"/>
+              <EmptySpace pref="28" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -61,7 +61,7 @@
         <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
           <Font name="Dialog" size="24" style="0"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="V&#xe4;nligen v&#xe4;lj vilken typ av utrustning du vill registrera."/>
+        <Property name="text" type="java.lang.String" value="V&#xe4;nligen v&#xe4;lj vilken typ av utrustning du vill avregistrera."/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="kommunikationKnapp">
